--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,8 +22,12 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
-    "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^2.0.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
