--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unfurl-preview",
   "version": "0.1.0",
+  "private": true,
   "description": "",
   "scripts": {
     "start-server": "cd server && npm start",
