--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unfurl-preview-server",
   "version": "0.1.0",
+  "private": true,
   "description": "",
   "main": "server.js",
   "scripts": {
