--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "",
   "scripts": {
-    "start-server": "cd server && npm start",
+    "start-server": "cd server && now dev --port 8080",
     "start-client": "cd client && npm start",
     "start": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
