--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "description": "",
-  "main": "server.js",
   "scripts": {
-    "test": "test",
-    "start": "node server.js"
+    "test": "test"
   },
   "author": "chris48s",
   "license": "MIT",
   "dependencies": {
     "unfurl.js": "^5.0.1"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
