--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 ---
 language: node_js
 node_js:
-  - "8"
-env:
-  - TEST_DIR=client
-  #- TEST_DIR=server
-before_install:
-  - cd $TEST_DIR
+  - "10"
 install:
-  - npm install
+  - npm ci
 script:
   - npm test
-  - sh -c "if [ '$TEST_DIR' = 'client' ]; then npm run build; fi"
+  - npm run build
