--- a/package.json
+++ b/package.json
@@ -2,15 +2,32 @@
   "name": "unfurl-preview",
   "version": "0.1.0",
   "private": true,
-  "description": "",
-  "scripts": {
-    "start-server": "cd server && now dev --port 8080",
-    "start-client": "cd client && npm start",
-    "start": "concurrently \"npm run start-server\" \"npm run start-client\""
-  },
+  "homepage": "https://unfurl-preview.now.sh/",
   "author": "chris48s",
   "license": "MIT",
-  "devDependencies": {
-    "concurrently": "^5.0.2"
+  "dependencies": {
+    "axios": "^0.19.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "unfurl.js": "^5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "npm run lint && react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.js\" \"api/**/*.js\"",
+    "predeploy": "npm run build"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "engines": {
+    "node": "10.x"
   }
 }
