--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,16 @@
 {
     "env": {
-        "browser": true,
         "es6": true,
         "node": true,
         "mocha": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "eslint:recommended"
     ],
-    "settings": {
-        "react": {
-          "version": "latest"
-        }
-    },
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
         "ecmaVersion": 6,
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
     "rules": {
         "indent": [
             "error",
