--- a/package.json
+++ b/package.json
@@ -2,33 +2,21 @@
   "name": "unfurl-preview",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://unfurl-preview.now.sh/",
+  "homepage": "https://unfurl-preview.vercel.app/",
   "author": "chris48s",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
     "unfurl.js": "^5.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "npm run lint && react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint \"src/**/*.js\" \"api/**/*.js\"",
-    "predeploy": "npm run build"
+    "test": "npm run lint",
+    "lint": "eslint \"api/**/*.js\""
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "engines": {
-    "node": "12.x",
-    "npm": ">=7.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.5.0"
   }
 }
