--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint \"api/**/*.js\""
   },
   "engines": {
-    "node": ">=16.0.0",
+    "node": "14.x",
     "npm": ">=8.0.0"
   },
   "devDependencies": {
