--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "scripts": {
     "test": "npm run lint",
-    "lint": "eslint \"**/*.js\""
+    "lint": "eslint \"**/*.js\"",
+    "start": "vercel dev"
   },
   "engines": {
     "node": "18.x",
     "npm": ">=9.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "vercel": "^33.6.2"
   }
 }
